# MapTiler

./: .gitignore  AffineTransform.h  Area.cpp  Area.h  CMakeLists.txt  ClearDatabase.sql  CoordinateTransformation.cpp  CoordinateTransformation.h  CreateDatabase.sql  CreateFilledTiles.sql  Dockerfile  GDALMap.cpp  GDALMap.h  GLTest.cpp  GeoMap.cpp  GeoMap.h  GeoMapProvider.cpp  GeoMapProvider.h  GeoTile.cpp  GeoTile.h  MapTiler.cpp  MapTiler.files  MapTiler.includes  MapTiler.pro  MapViewer.cpp  MapViewer.files  MapViewer.includes  Point.h  ReadMe.md  Rect.cpp  Rect.h  ShapeFileExample  ShapeFileExample.cpp  SpatialReference.cpp  SpatialReference.h  Utils.cpp  Utils.h  databaseexample.cpp  db_polygon_pipeline.json  db_polygon_pipeline_leenhof.json  (+25 more)
Lib/: .ycm_extra_conf.py  AddMetadataStep.cpp  AddMetadataStep.h  AffineTransform.cpp  AffineTransform.h  Area.cpp  Area.h  AreaLookup.cpp  AreaLookup.h  BufferFactory.cpp  BufferFactory.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CoordinateTransformation.cpp  CoordinateTransformation.h  DatabaseWrapper.cpp  DatabaseWrapper.h  Feature.cpp  Feature.h  FeatureIterator.cpp  FeatureIterator.h  Field.cpp  Field.h  FrameBuffer.cpp  FrameBuffer.h  GDALMap.cpp  GDALMap.h  GLWindow.cpp  GLWindow.h  GeoMap.cpp  GeoMap.h  GeoMapProvider.cpp  GeoMapProvider.h  GeoTile.cpp  GeoTile.h  Geometry.cpp  Geometry.h  GridProducerStep.cpp  GridProducerStep.h  (+69 more)
QtApp/: MapTiler.pro  mainwindow.h
example_pipelines/: db_polygon_pipeline.json  db_polygon_pipeline_desktop.json  ecw_pipeline_2008_yu.json  ecw_pipeline_2010_yu.json  ecw_pipeline_2012_yu.json  ecw_pipeline_2015.json  ecw_pipeline_2018_hr_heerlen.json  ecw_pipeline_2018_hr_zl.json  ecw_pipeline_bumblebee_points_zl.json  ecw_pipeline_bumblebee_points_zl_500x500.json  ecw_pipeline_desktop.json  ecw_pipeline_werk_2013.json  ecw_pipeline_werk_2014.json  polygon_pipeline.json  rd_pipeline_desktop.json  single_ecw_pipeline_desktop.json
